Updated all image sources

--- a/3d.html
+++ b/3d.html
@@ -77,9 +77,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1ONL-0xrTyUabzxS6V2rakiEWFxKzeL5Y"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Mood Cookies.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Mood Cookies</h3>
@@ -90,9 +90,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1hMKtMUj1RQPmd5qV8HMJ4lNt_sBsn_Gv"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Mood Table.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Mood Table</h3>
@@ -103,9 +103,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1wb3F4k0h5rwRrbqAMqxBSuTYT52bp-zO"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Wick n Wanda.gif"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Wick n Wanda</h3>
@@ -116,9 +116,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1Qkx2HnGXZDVzxmDf_gfR7phUIv82wzJM"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Lit-Banner-1.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Lit Banner 1</h3>
@@ -129,9 +129,9 @@
           <!-- <a href=""> -->
               <div class="content-overlay"></div>
               <img
-                  class="content-image rounded-lg"
-                  src="https://drive.google.com/uc?export=view&id=1OmCqonLdk59bBtK3zJLiEyYTA9mOVQ8G"
-                  alt="image"
+                class="content-image rounded-lg"
+                src="images/3d/Lit Summer.gif"
+                alt="image"
               >
               <div class="content-details fadeIn-top">
               <h3 class="content-title">Lit Summer</h3>
@@ -142,9 +142,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1QShdAIbpwuXB97yLBEDKNly6cEhdEtVE"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Lit-Banner-2.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Lit Banner 2</h3>
@@ -155,9 +155,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1mx8cqr4NWfDCpV_vF64KPnayveN6C4z5"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Lit Christmas.gif"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Lit Christmas</h3>
@@ -168,9 +168,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1ebMmybATDAPnvNwnAQ0ivwVwu14JiCok"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Lit-Banner-3.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Lit Banner 3</h3>
@@ -181,9 +181,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1Wd3GX0WKkEFRffDqvzcAbf908BqiNSKS"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Symply G.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Symply G</h3>
@@ -194,9 +194,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1Rz15083a7h6ICRH-Fr07sdkSGHbu8H6h"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/GRWM Dispenser.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">GRWM DISPENSER</h3>
@@ -207,9 +207,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1gMPpzxXHXI_F-Yj5CS_6Iv1b1EQqGgmn"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Goo Truck.gif"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Goo Truck</h3>
@@ -220,9 +220,9 @@
           <!-- <a href=""> -->
               <div class="content-overlay"></div>
               <img
-                  class="content-image rounded-lg"
-                  src="https://drive.google.com/uc?export=view&id=17Jnm7-UbZfX9DDJgggEQSA4tZdsZvAIa"
-                  alt="image"
+                class="content-image rounded-lg"
+                src="images/3d/Hey Honey.png"
+                alt="image"
               >
               <div class="content-details fadeIn-top">
               <h3 class="content-title">Hey Honey</h3>
@@ -233,9 +233,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1oAb9gbxont6dGtdIRfjNCDfFjXegZ0_b"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/CKG.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">CKG</h3>
@@ -246,9 +246,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1ZlSXSu2TSpQK8bYDy1upMWMV2viZRGRx"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Catt & Co.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Catt & Co.</h3>
@@ -259,9 +259,9 @@
         <!-- <a href=""> -->
             <div class="content-overlay"></div>
             <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                alt="image"
+              class="content-image rounded-lg"
+              src="images/3d/Casa Selma.png"
+              alt="image"
             >
             <div class="content-details fadeIn-top">
             <h3 class="content-title">Casa Selma</h3>
