--- a/graphic.html
+++ b/graphic.html
@@ -75,9 +75,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=19hUOo04NYSLi7imUsFvoOC1DZuPfplt5"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Pinche Taqueria.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Pinche Taqueria</h3>
@@ -88,9 +88,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1Z1URvBTQnwVmi9zVn4FpPzqQsRJwf5uu"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Salo Salo Menu.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Salo Salo Menu</h3>
@@ -103,9 +103,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1YjsNhmiFVhqNmSVX79J97vehkLfQOCB9"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Sugar and Ice - Ice Cream.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Sugar and Ice - Ice Cream</h3>
@@ -116,9 +116,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1qg3-2nE1vTlEc70Eq9hg3pXnRPOVf0qQ"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Loco Drinks.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Loco Drinks</h3>
@@ -131,9 +131,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1Xqa5qy36tDQXJC7-2SJqGHikn4uOnUB6"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Jmarketing Presentation.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">JMarketing Presentation</h3>
@@ -144,9 +144,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1Okydt0obYB-CWg4FaA7VI5TuuRIomHAG"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/SOL Poster.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">SOL Poster</h3>
@@ -159,9 +159,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1E7kemDiFndBiIpx0Ba5p19fznJo2sWGC"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Mons Commissioned Art.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Mons Commissioned Art</h3>
@@ -172,9 +172,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1BnaeZfn9nKutQHRt_TMSJg6FLmTRqm6Y"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/FFAF Newsletter.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">FFAF Newsletter</h3>
@@ -187,9 +187,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1MB4Z3C0lNBbD07Aexq2l7878q0J9q0V1"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Toddler Playtown.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Toddler Playtown</h3>
@@ -200,9 +200,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1y-s8iIph6kdlpiCwAb5QOlycEaJriPez"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Cuadtrito Box.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Cuadrito Box</h3>
@@ -215,9 +215,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1hT2x1xZyKTqK3uChN3RCV5yJJbcnEa91"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Lulus Chips.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Lulus Chips</h3>
@@ -228,9 +228,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=14Aewi6I3FtH6aVo8zNGncSdpcsbA8PvC"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/FFAF Linecard.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">FFAF Linecard</h3>
@@ -243,9 +243,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1KdOkgwB7EJaA_NSskYKEceM0qpP_JcrJ"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/2023-05-05-F45 Lasalle-Free Ad- 2.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">F45 Lasalle Free Ad</h3>
@@ -256,9 +256,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1LAstsFq6vN51ogHA2MwhIoPItA57Ad_q"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/SyBridge banner.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">SyBridge Banner</h3>
@@ -271,9 +271,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1LRLJZ1k0g594mb6OoUDRjooOF3WPj-x6"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/Lachies Campaign.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Lachies Campaign</h3>
@@ -284,9 +284,9 @@
             <!-- <a href="graphic/casa-selma"> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=141iRuVxqW4KCvdK4oKG_JEFLM4egooTA"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/graphic/Lachies Lobster Pan Business Card.jpg"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Lachies Lobster Pan Business Card</h3>
@@ -299,9 +299,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1Img_vuhH1adef5vtuF5jm1iLfBhy-d7c"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/JMarketing Intro Newsletter.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">JMarketing Intro Newsletter</h3>
@@ -312,9 +312,9 @@
             <!-- <a href="graphic/casa-selma"> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1LmYM3dpX_7vVxyC0qFljVx4semrZZyXe"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/graphic/JMarketing Clutch Award Newsletter.jpg"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">JMarketing Clutch Award Newsletter</h3>
@@ -327,9 +327,9 @@
               <!-- <a href="graphic/casa-selma"> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=11dSxJ6t-o3r7HYzHwUii4qJfPzclIJki"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/graphic/JMarketing Business Card.jpg"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">JMarketing Business Card</h3>
@@ -340,9 +340,9 @@
             <!-- <a href="graphic/casa-selma"> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1nFBh6_aMjzOdx-CbNbQOdPCfGcPCa5fy"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/graphic/Goo Cookies Christmas Packaging.jpg"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Goo Cookies Christmas Packaging</h3>
