--- a/resume.html
+++ b/resume.html
@@ -64,28 +64,28 @@
       <div class="grid grid-cols-1 lg:grid-cols-5 gap-10 pb-28">
         <div class="grid grid-cols-1 gap-4 justify-items-center">
           <img
-              src="https://drive.google.com/uc?export=view&id=18ZfvApUVjhZ9EN6VINOq0yLkeIFbmQN3"
-              alt="image"
-              width="60"
-              height="60"
+            src="images/resume/Graphic Design Icon.png"
+            alt="image"
+            width="60"
+            height="60"
           >
           <p class="font-medium text-xl text-[#678309] text-center">Graphic Designer</p>
         </div>
         <div class="grid grid-cols-1 gap-4 justify-items-center">
           <img
-              src="https://drive.google.com/uc?export=view&id=1tFVEel1KN00Dx2bjY97ig0j3XbtEBaLy"
-              alt="image"
-              width="60"
-              height="60"
+            src="images/resume/3D Visualizer Icon.png"
+            alt="image"
+            width="60"
+            height="60"
           >
           <p class="font-medium text-xl text-[#678309] text-center">3D Visualizer</p>
         </div>
         <div class="grid grid-cols-1 gap-4 justify-items-center">
           <img
-              src="https://drive.google.com/uc?export=view&id=1dQCtQN0Do4Btik8dDgX7nOIpxvD-Q2eh"
-              alt="image"
-              width="40"
-              height="40"
+            src="images/resume/Furniture Design Icon.png"
+            alt="image"
+            width="40"
+            height="40"
           >
           <p class="font-medium text-xl text-[#678309] text-center">Furniture Designer</p>
         </div>
@@ -109,7 +109,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
       <div class="col-span-1 justify-self-center">
         <img
-          src="https://drive.google.com/uc?export=view&id=19P-zPDShFmcumh8zGxu7qxMxGi_VeaDv"
+          src="images/resume/Jmarketing Llogo.png"
           alt="image"
           width="170"
           height="170"
@@ -137,7 +137,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
       <div class="col-span-1 justify-self-center">
         <img
-          src="https://drive.google.com/uc?export=view&id=1svKQVm9z77B_w0NA2J-_sc5gxMr_occ7"
+          src="images/resume/By Tatshani Logo.png"
           alt="image"
           width="120"
           height="120"
@@ -161,7 +161,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
       <div class="col-span-1 justify-self-center">
         <img
-          src="https://drive.google.com/uc?export=view&id=1gV3rZMPm4bVrtpOwSTUYn8uaquEVS_eA"
+          src="images/resume/Casa Selma Logo.png"
           alt="image"
           width="130"
           height="130"
@@ -189,7 +189,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
       <div class="col-span-1 justify-self-center">
         <img
-          src="https://drive.google.com/uc?export=view&id=1eM-uCp-x9zGLq-3Ypev9kP6g1Zjrvy8B"
+          src="images/resume/ATD Logo.png"
           alt="image"
           width="140"
           height="140"
@@ -219,10 +219,10 @@
       <div>
         <div class="flex flex-col">
           <img
-              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
-              alt="image"
-              width="50"
-              height="50"
+            src="images/resume/mountain (1).png"
+            alt="image"
+            width="50"
+            height="50"
           >
           <p class="font-bold text-2xl pb-10">Softwares</p>
         </div>
@@ -244,10 +244,10 @@
        <div>
         <div class="flex flex-col">
           <img
-              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
-              alt="image"
-              width="50"
-              height="50"
+            src="images/resume/mountain (1).png"
+            alt="image"
+            width="50"
+            height="50"
           >
           <p class="font-bold text-2xl pb-10">Management<br/>Apps</p>
         </div>
@@ -265,10 +265,10 @@
        <div>
         <div class="flex flex-col">
           <img
-              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
-              alt="image"
-              width="50"
-              height="50"
+            src="images/resume/mountain (1).png"
+            alt="image"
+            width="50"
+            height="50"
           >
           <p class="font-bold text-2xl pb-10">Expertise</p>
         </div>
@@ -290,10 +290,10 @@
        <div>
         <div class="flex flex-col">
           <img
-              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
-              alt="image"
-              width="50"
-              height="50"
+            src="images/resume/mountain (1).png"
+            alt="image"
+            width="50"
+            height="50"
           >
           <p class="font-bold text-2xl pb-10">Interpersonal</p>
         </div>
