--- a/web.html
+++ b/web.html
@@ -71,9 +71,9 @@
               <!-- <a href=""> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1icF_e9m0tTtx5jVp13KoRD9JleSZvkUu"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/web/Website Mockup (1).png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">SyBridge</h3>
@@ -84,9 +84,9 @@
               <!-- <a href=""> -->
                   <div class="content-overlay"></div>
                   <img
-                      class="content-image rounded-lg"
-                      src="https://drive.google.com/uc?export=view&id=1JVOulInikV7o3rwJvqXm1mQah6wGYoPl"
-                      alt="image"
+                    class="content-image rounded-lg"
+                    src="images/web/Website Mockup 1.png"
+                    alt="image"
                   >
                   <div class="content-details fadeIn-top">
                   <h3 class="content-title">Lachies Lobster Pan</h3>
@@ -99,9 +99,9 @@
           <!-- <a href=""> -->
               <div class="content-overlay"></div>
               <img
-                  class="content-image rounded-lg"
-                  src="https://drive.google.com/uc?export=view&id=176lrhIftyAgFYgjolT58kQLhMlO_J1zp"
-                  alt="image"
+                class="content-image rounded-lg"
+                src="images/web/Mission Machining.png"
+                alt="image"
               >
               <div class="content-details fadeIn-top">
               <h3 class="content-title">Mission Machining</h3>
