--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     <div class="grid grid-cols-1 gap-0 md:grid-cols-2 md:gap-14 lg:grid-cols-3 lg:gap-24 pt-20 md:pt-40">
       <div class="col-span-1 pt-16">
         <img
-          src="https://drive.google.com/uc?export=view&id=1nqbsdnEl_GgnRNHjcyZ7kxJgLvGJNMUr"
+          src="images/about/Portrait-Arch.png"
           alt="image"
           width="700"
           height="700"
@@ -157,28 +157,28 @@
         </div>
         <div class="flex flex-row">
           <img
-              src="https://drive.google.com/uc?export=view&id=1qPLaP21iFkLm3JVywEPofrb0xHlb3TRN"
-              alt="image"
-              width="25"
-              height="25"
+            src="images/about/Sun Icon.png"
+            alt="image"
+            width="25"
+            height="25"
           >
           <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">sagittarius</p>
         </div>
         <div class="flex flex-row">
           <img
-              src="https://drive.google.com/uc?export=view&id=1wCa6SN6RlVQb0-_zQLeuCHHi-supY2z5"
-              alt="image"
-              width="25"
-              height="25"
+            src="images/about/Moon Icon.png"
+            alt="image"
+            width="25"
+            height="25"
           >
           <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">scorpio</p>
         </div>
         <div class="flex flex-row">
           <img
-              src="https://drive.google.com/uc?export=view&id=1MsSU0mIEk51fecfpncfcVR00mXFKv6iM"
-              alt="image"
-              width="25"
-              height="25"
+            src="images/about/Rising Icon.png"
+            alt="image"
+            width="25"
+            height="25"
           >
           <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">aquarius</p>
         </div>
@@ -204,37 +204,37 @@
       </div>
       <div class="grid grid-cols-1 gap-2 justify-items-center">
         <img
-            src="https://drive.google.com/uc?export=view&id=1Cu83NSk_2GQiafB8j0n4sfnR6ft0UvE2"
-            alt="image"
-            width="70"
-            height="70"
+          src="images/about/Yoga Icon.png"
+          alt="image"
+          width="70"
+          height="70"
         >
         <p class="font-bold text-lg text-[#A697AD]">aerial yoga</p>
       </div>
       <div class="grid grid-cols-1 gap-2 justify-items-center">
         <img
-            src="https://drive.google.com/uc?export=view&id=1i0T-5FIEvWU9u5FeUbfCe_gnxn-fvUZ2"
-            alt="image"
-            width="95"
-            height="95"
+          src="images/about/Camping Icon.png"
+          alt="image"
+          width="95"
+          height="95"
         >
         <p class="font-bold text-lg text-[#A697AD]">camping</p>
       </div>
       <div class="grid grid-cols-1 gap-2 justify-items-center">
         <img
-            src="https://drive.google.com/uc?export=view&id=1ml79EFRgwopUBhPBVuneWZ84GCRbJJOv"
-            alt="image"
-            width="70"
-            height="70"
+          src="images/about/Cacao Icon.png"
+          alt="image"
+          width="70"
+          height="70"
         >
         <p class="font-bold text-lg text-[#A697AD]">cacao drinker</p>
       </div>
       <div class="grid grid-cols-1 gap-2 justify-items-center">
         <img
-            src="https://drive.google.com/uc?export=view&id=1qr0NW11PKVFqqWAjhT-4uQax_nT1vnOv"
-            alt="image"
-            width="70"
-            height="70"
+          src="images/about/Freedive Icon.png"
+          alt="image"
+          width="70"
+          height="70"
         >
         <p class="font-bold text-lg text-[#A697AD]">freediving</p>
       </div>
