--- a/furniture.html
+++ b/furniture.html
@@ -70,9 +70,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1YQRF3AdNB9d_WGUQ77KhCO5-COelihzH"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Armonia.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Armonia</h3>
@@ -83,9 +83,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1mIRhI61H1WPH2P1zzkJe-ELTFQW4QL6P"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Ayala Bench-2.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Ayala Bench</h3>
@@ -96,9 +96,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1F5kC9u3Y4vH7DCWoBnQlhkbES6U7xTpk"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Vogue.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Vogue Italia</h3>
@@ -109,9 +109,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1vvJ-7r0XoARoEMviN2Dw0djDXAoBWO8X"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Dark 1.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Salakot</h3>
@@ -122,9 +122,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=18l6hVIroxl4-bp5sqa-nvCic84QWqSBJ"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Dark 2.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Ligaya</h3>
@@ -135,9 +135,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1FLZmWDOwdoGO8-CnEyfSmWu9UdZkAaiB"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Whale.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Willy the Whale</h3>
@@ -148,9 +148,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                class="content-image rounded-lg"
-                src="https://drive.google.com/uc?export=view&id=1T8Y2ccmTE9y3OPHyCg7_WrVy1TusLzOL"
-                alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Chair.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                     <h3 class="content-title">Emery</h3>
@@ -161,9 +161,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1Lv0aWN765Wy2YEn8T4BnCibCwQv863oA"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Dark 4.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Haya-Haya</h3>
@@ -174,9 +174,9 @@
             <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1mwaNDdOSaoTrhaHtFa3j1XFA-bKEIjrp"
-                    alt="image"
+                  class="content-image rounded-lg"
+                  src="images/furniture/Dark 3.png"
+                  alt="image"
                 >
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Dawata</h3>
