Updated footer, navbar, home page, and graphic design page

--- a/graphic/casa-selma.html
+++ b/graphic/casa-selma.html
@@ -28,15 +28,15 @@
           <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-bold">
             <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
             <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-            <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-            <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
-            <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+            <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC DESIGN</a></li>
+            <li><a href="3d" class="hover:text-[#A697AD]">3D VISUALS</a></li>
+            <li><a href="web" class="hover:text-[#A697AD]">WEB DESIGN</a></li>
             <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
             <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
           </ul>
         </div>
         <a href=".">
-          <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold hover:bg-[#E6E4D4]">
+          <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold hover:bg-[#FCFAEE]">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
             </svg>
@@ -48,9 +48,9 @@
         <ul class="menu menu-horizontal px-1 font-bold text-base">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-          <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-          <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
-          <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+          <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC DESIGN</a></li>
+          <li><a href="3d" class="hover:text-[#A697AD]">3D VISUALS</a></li>
+          <li><a href="web" class="hover:text-[#A697AD]">WEB DESIGN</a></li>
           <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
           <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
         </ul>
@@ -152,9 +152,9 @@
 
   </div>
 
-  <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
+  <footer class="footer items-center py-14">
     <aside class="items-center grid-flow-row lg:grid-flow-col">
-      <p class="text-lg lg:text-xl font-bold pr-10">marinatatshani@gmail.com</p>
+      <p class="text-xl lg:text-2xl font-bold pr-10">marinatatshani@gmail.com</p>
       <div class="flex flex-row gap-4">
         <a href="https://www.instagram.com/by__tatshani/" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
