--- a/index.html
+++ b/index.html
@@ -16,58 +16,103 @@
   </head>
   <body>
 
-    <div class="sticky top-0 z-50 navbar baseColor">
-      <div class="navbar-start">
-        <div class="dropdown">
-          <label tabindex="0" class="btn btn-ghost xl:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-            </svg>
-          </label>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-bold">
-            <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
-            <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-            <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-            <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
-            <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
-            <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
-            <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
-          </ul>
-        </div>
-        <a href=".">
-          <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold hover:bg-[#E6E4D4]">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
-            </svg>
-            marina tatshani
-          </button>
-        </a>
-      </div>
-      <div class="navbar-end hidden xl:flex">
-        <ul class="menu menu-horizontal px-1 font-bold text-base">
+  <!-- NAVBAR -->
+  <div class="sticky top-0 z-50 navbar baseColor">
+    <div class="navbar-start">
+      <div class="dropdown">
+        <label tabindex="0" class="btn btn-ghost xl:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+          </svg>
+        </label>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-bold">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-          <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-          <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
-          <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+          <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC DESIGN</a></li>
+          <li><a href="3d" class="hover:text-[#A697AD]">3D VISUALS</a></li>
+          <li><a href="web" class="hover:text-[#A697AD]">WEB DESIGN</a></li>
           <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
           <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
         </ul>
       </div>
+      <a href=".">
+        <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#CBC6FD] font-bold hover:bg-[#FCFAEE]">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+          </svg>
+          marina tatshani
+        </button>
+      </a>
     </div>
+    <div class="navbar-end hidden xl:flex">
+      <ul class="menu menu-horizontal px-1 font-bold text-base">
+        <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
+        <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
+        <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC DESIGN</a></li>
+        <li><a href="3d" class="hover:text-[#A697AD]">3D VISUALS</a></li>
+        <li><a href="web" class="hover:text-[#A697AD]">WEB DESIGN</a></li>
+        <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
+        <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
+      </ul>
+    </div>
+  </div>
 
+
+  <!-- MAIN PAGE HEADER -->
   <div class="main">
-    <!-- TEXT HEADER -->
-    <div class="py-20 md:py-40 grid grid-cols-1 gap-2 lg:gap-4">
+    <div class="pt-20 md:pt-40 grid grid-cols-1 gap-2 lg:gap-4">
       <p class="text-4xl lg:text-6xl font-bold">Hey I’m Marina and I am a</p>
-      <p class="text-4xl lg:text-6xl font-bold">multidisciplinary digital designer</p>
-      <p class="text-xl lg:text-2xl font-semibold">in the field of graphic design, 3D art, and furniture design.</p>
+      <div class="lg:flex lg:gap-5">
+        <p class="text-4xl lg:text-6xl">
+          <span class="multi-text">
+            multi
+          </span>
+          <span class="italic">
+            dis
+          </span>
+          <span class="font-bold">
+            cipl
+          </span>
+          <span class="inary-text">
+            inary
+          </span>
+        </p>
+        <p class="text-4xl lg:text-6xl font-bold">digital designer</p>
+      </div>
+      <div class="flex flex-wrap gap-3">
+        <p class="text-xl lg:text-2xl font-semibold">in the field of</p>
+        <div class="text-xl lg:text-2xl font-semibold px-3 rounded-full border-[#CBC6FD] bg-[#CBC6FD] text-center w-fit">
+          advertising
+        </div>
+        <div class="text-xl lg:text-2xl font-semibold px-3 rounded-full border-[#DBE65D] bg-[#DBE65D] text-center w-fit">
+          furniture design
+        </div>
+        <p class="text-xl lg:text-2xl font-semibold">&</p>
+        <div class="text-xl lg:text-2xl font-semibold px-3 rounded-full border-[#F7E6C3] bg-[#F7E6C3] text-center w-fit">
+          3d visualization
+        </div>
+      </div>
     </div>
 
-    <div class="flex flex-col">
-      <!-- WORKS  -->
+    <div class="pb-28 md:pb-32">
+      <p class="text-lg lg:text-xl py-9">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br/>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
+      </p>
+
+      <a href="about">
+        <button class="btn normal-case btn-neutral w-40">
+          about me
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+            <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+          </svg>
+        </button>
+      </a>
+    </div>
+
+    <!-- <div class="flex flex-col">
       <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-5">WORKS</p>
-      <!-- GALLERY -->
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
         <div class="col-span-1 lg:col-span-2 grid grid-rows-1 lg:grid-rows-2 gap-5">
           <div class="content h-full hidden lg:block">
@@ -183,7 +228,6 @@
     </div>
 
     <div class="py-40 grid grid-cols-1 lg:grid-cols-2 gap-20 lg:gap-60 text-black">
-      <!-- MY DESIGN PHILOSOPHY -->
       <div class="flex flex-col">
         <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-8">MY DESIGN PHILOSOPHY</p>
         <p class="text-base">
@@ -195,9 +239,7 @@
           choices with the goals and needs of the users.
         </p>
       </div>
-      <!-- LEARN MORE ABOUT ME & RESUME -->
       <div class="flex flex-col">
-        <!-- LEARN MORE ABOUT ME -->
         <div class="grid grid-cols-1 gap-2">
           <p class="text-xl xl:text-2xl font-bold text-[#678309]">LEARN MORE ABOUT ME</p>
           <p class="text-base">Who I am, my achievements, interests, and experiences.</p>
@@ -210,7 +252,6 @@
             </button>
           </a>
         </div>
-        <!-- OR HEAD STRAIGHT TO MY RESUME -->
         <div class="grid grid-cols-1 gap-2 pt-10">
           <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR HEAD STRAIGHT TO MY RESUME</p>
           <p class="text-base">A summary of my work experience.</p>
@@ -224,13 +265,95 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
-  <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
+  <!-- EXPLORE MY PORTFOLIO -->
+  <div class="explore-portfolio">
+    <h1 class="font-bold text-3xl lg:text-4xl pb-10">Explore my Portfolio</h1>
+
+    <div class="grid grid-cols-1 lg:grid-cols-4 gap-20 lg:gap-4">
+      <a href="furniture">
+        <div class="grid grid-cols-1 bg-[#DBE65D] portfolio-box">
+          <p>furniture<br/>design</p>
+          <img
+            src="images/portfolio/Portfolio-Furniture.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+      <a href="3d">
+        <div class="grid grid-cols-1 bg-[#F7E6C3] portfolio-box">
+          <p>3d<br/>visualization</p>
+          <img
+            src="images/portfolio/Portfolio-3D.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+      <a href="furniture">
+        <div class="grid grid-cols-1 bg-[#DBE65D] portfolio-box">
+          <p>furniture<br/>design</p>
+          <img
+            src="images/portfolio/Portfolio-Furniture.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+      <a href="3d">
+        <div class="grid grid-cols-1 bg-[#F7E6C3] portfolio-box">
+          <p>3d<br/>visualization</p>
+          <img
+            src="images/portfolio/Portfolio-3D.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+    </div>
+  </div>
+
+  <!-- MY WORK EXPERIENCE -->
+  <div class="main">
+    <div class="grid grid-cols-2 py-10">
+      <p class="text-lg lg:text-xl py-10">
+        IMAGE
+      </p>
+      <p class="text-lg lg:text-xl">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br/>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
+      </p>
+    </div>
+  </div>
+
+  <footer class="footer items-center py-14">
     <aside class="items-center grid-flow-row lg:grid-flow-col">
-      <p class="text-lg lg:text-xl font-bold pr-10">marinatatshani@gmail.com</p>
+      <p class="text-2xl lg:text-3xl font-bold pr-10">marinatatshani@gmail.com</p>
       <div class="flex flex-row gap-4">
         <a href="https://www.instagram.com/by__tatshani/" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
